Add ZenyinYang SVG asset to project

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -3,7 +3,7 @@ layout: '@layouts/AboutLayout.astro'
 title: 'About'
 ---
 import { Image } from "astro:assets";
-import plaguedoctor from "@images/plaguedoctor.svg";
+import plaguedoctor from "@svg_imgs/plaguedoctor.svg";
 
 I've been a principal architect at large Fortune listed companies for over 30 years.
 As a technology professional with  years of experience in delivering software and
