--- a/src/pages/test.mdx
+++ b/src/pages/test.mdx
@@ -3,7 +3,7 @@ layout: ../layouts/AboutLayout.astro
 title: "Test"
 ---
 import { Image } from "astro:assets";
-import plaguedoctor from "@images/plaguedoctor.svg";
+import plaguedoctor from "@svg_imgs/plaguedoctor.svg";
 
 Tailwinds:
 <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500"></div>
