Debug Satori on siteOrigin in prod

--- a/src/content/blog/2022-12-12-Jamacia.mdx
+++ b/src/content/blog/2022-12-12-Jamacia.mdx
@@ -11,7 +11,7 @@ tags:
   - pickleball
   - tropical
 class: "2022 > Travel > Jamacia > Pickleball"
-description: "A relaxed getaway filled with sunshine. Mornings spent playing pickleball, afternoons swimming and water skiing in the local bay — all within the comforts of an exclusive resort."
+description: "A sun-soaked escape where mornings begin with Jamaican coffee by the waves, followed by pickleball, swimming, and water skiing in the bay—all wrapped in the luxury of a private resort."
 album: "jamacia"
 cover: "JamacaWestmoreland.png"
 ---
