feat: Add new blog posts on GenAI research, travel destinations, and vlogs; implement dynamic layouts for posts based on type; enhance authentication and content protection features

--- a/src/content/blog/travel/2023-11-24-Coachella.mdx
+++ b/src/content/blog/travel/2023-11-24-Coachella.mdx
@@ -1,5 +1,5 @@
 ---
-layout: "@layouts/MDXLayout2.astro"
+layout: "@layouts/SSRLayout_V1.astro"
 author: Orbit Strider
 pubDatetime: 2023-11-18T17:50:00-08:00
 title: Coachella Valley
@@ -15,6 +15,7 @@ tags:
 class: "2018-2023 > Travel > California > Coachella Valley"
 description: "The Coachella Valley offers amazing places to explore!"
 album: "coachellavalley"
+auth_required: true
 ---
 The Coachella Valley is known for its wintertime resort cities, popular
 destinations for full-time retirees and seasonal residents. It hosts various
