--- a/src/content/blog/notes/2024-05-05-GenAITravelTips.mdx
+++ b/src/content/blog/notes/2024-05-05-GenAITravelTips.mdx
@@ -3,7 +3,7 @@ layout: "@layouts/MDXLayout2.astro"
 author: Halo Cyclone
 pubDatetime: 2024-05-05T17:17:17-08:00
 title: GenAI Travel - BucketList
-type: 'TRAVEL'
+type: 'BLOG'
 slug: GenAI-Travel
 featured: true
 tags:
