--- a/src/content/blog/notes/2025-12-31-YearInReview.mdx
+++ b/src/content/blog/notes/2025-12-31-YearInReview.mdx
@@ -14,127 +14,170 @@ tags:
   - "vacation"
   - "tuscon"
 class: "2025 > Travel > YearOf > Reflections"
-description: "2025 was a nonstop stream of visits—family, friends, and familiar faces cycling through all year long."
+description: "Year 2025 highlights - plenty of family visits, pickleball, and cycling."
 album: "2025-YearInReview"
 auth_required: false
 ---
 
-🗓️ Nov 26–Dec 29, 2024
+---
+
+## 📍 Kelowna Trips: 9 visits totalling 5600 miles & 120 hours drive time...
+1. Nov 26–28, 2024 – Adrienne Sherrin’s 90th birthday
+2. Dec 26–30, 2024 – Boxing Day visit with Darrell and Adrienne
+3. Mar 19–23, 2025 – Final visit with Adrienne before her passing
+4. Mar 28–31, 2025 – Memorial gathering and butterfly tribute 🦋
+5. May 2, 2025 – Brief check-in on Darrell
+6. June 17–18, 2025 – Quick visit before Whistler
+7. July 17–19, 2025 – Summer visit and Lake Country rides
+8. Oct 30–Nov 2, 2025 – Autumn gravel ride and meals with Darrell
+9. Dec 25–28, 2025 – Final holiday visit of the year 🎄
+### and countless restops STOPS along the way! 
+---
+
+## 🗓️ Nov 26–28, 2024
 
 📍 Kelowna, British Columbia
 
-•  Celebrated Adrienne Sherrin’s 90th birthday in Kelowna, with family gatherings at favorite spots like PÜR & SIMPLE, The Keg, and Munson Pond Park.
-•  Locations span the Lower Mission and Glenmore areas, with timestamps showing consistent activity through late December.
+* Celebrated Adrienne Sherrin’s 90th birthday in Kelowna with the whole family. Enjoyed family & friends at favorite spots like PÜR & SIMPLE, The Keg, and nice walk around Munson Pond Park.
+* On the 27th, a cool hike up Knox Mountain (hill) with Alex, Andrea, and Todd, including a quick visit to Paul’s Tomb.
+* Finished the weekend with an indoor session of pickleball at the Rutland YMCA Community Centre with Darrell, Alex, and Andrea.
+* Alex stayed for more days with his parents after everyone else left.
 
-🏞️ Kelowna, British Columbia
+## 🗓️ Dec 26–30, 2024
 
-•  Adrienne Sherrin’s 90th birthday was celebrated here early in the year, followed by her memorial in March—a reflective family reunion.
-•  Knox Mountain Park offered panoramic views of Okanagan Lake and grounding hikes during a time of remembrance.
-•  Parkinson Recreation Park and Munson Pond Park provided peaceful walks and birdwatching—both favorites of Darrell.
-•  PÜR & SIMPLE and The Keg Restaurant remained staples for family brunches and dinners, filled with stories and laughter.
+📍 Kelowna, British Columbia
 
-✈️ Florida Journey Begins
+* Arrived on Boxing Day to visit Darrell and Adrienne.
+* Did the usual rounds of PÜR & SIMPLE and The Keg for meals as well as. pickleball at the Rutland YMCA Community Centre.
+* A cold but nice hike up Knox Mountain with just Andrea and me to see the views on a frosty Kelowna city.
 
-🗓️ Feb 12–Feb 23, 2025
+---
 
-🏖️ Fort Lauderdale, FL
+## ✈️ Florida Journey Begins
 
-🗓️ Feb 12
+🗓️ Feb 12–23, 2025
 
-•  Arrival point into South Florida. Known for its boating canals and art deco architecture.
+### 🏖️ Fort Lauderdale, FL – Feb 12
 
-🏝️ Cape Coral, FL
+* Arrival point into South Florida. Known for its boating canals and art deco architecture and beachfront.
+* Spent the evening walking along the beach front with the moon slowly rising over the Atlantic Ocean.
+* Next day, drove to Cape Coral crossing Florida. 
 
-🗓️ Feb 13–14
+### 🏝️ Cape Coral, FL – Feb 13–22
 
-•  Explored the canal-lined neighborhoods and waterfront parks. A quiet base for Gulf Coast excursions.
-•  Cape Coral & Punta Gorda: Known for canals and waterfront charm, these Gulf Coast towns offered warm escapes and quiet reflection.
+* Explored the canal-lined neighborhoods and waterfront parks. A quiet base for Gulf Coast excursions for the next five days.
+* Cape Coral & Punta Gorda: Known for canals and waterfront charm, these Gulf Coast towns offered a small-town feel with relatively good views and restaurants.
+* Played in a pickleball tournament at Cape Coral Sports Complex (less than a month old facility). We battled gale-force winds as well as opponents. 🌬
+* Entered another tournament in Punta Gorda, only to face the same relentless nemesis: the wind. This time, gusts reached up to 35 mph!
 
-🌊 Florida Keys
+### 🌊 Florida Keys – Feb 17–18
 
-🗓️ Feb 17–18
+* Traveled along the Overseas Hwy through Islamorada and finally to Key West, reaching the southernmost point of the continental U.S. in a covertable Mustang no less!
+* Key West is an interesting place full of historic sites, and vibrant local culture and great restaurants.
+* Stayed at the cozy hotel: [La Concha Key West](https://www.marriott.com/en-us/hotels/eywaw-la-concha-key-west-autograph-collection/overview/). Highly recommend this place.
+* Excellent pickleball courts nearby at [Higgs Beach Park](https://maps.app.goo.gl/DAQtzwEg4GzgBNcW9) with all the locals and snowbird players in for the season.
 
-•  Traveled through Islamorada and Key West, reaching the southernmost point of the continental U.S.
-•  Highlights include the Overseas Highway, coral reefs, and Hemingway House.
+### 🐎 Ocala, FL – Feb 20
 
-🐎 Ocala, FL
+* Visited the [World Equestrian Center](https://worldequestriancenter.com/), a premier venue for international equine events.
+* The WSC is located in Ocala and known as the “Horse Capital of the World,” with rolling pastures and thoroughbred farms where Rick and Pam live. They gave us an incredible tour around the area.
+* At the WSC, enjoyed the layout and merchandise store with an awesome cafe/coffee shop that was very well appointed.
 
-🗓️ Feb 20
+### 🐊 Everglades Region – Feb 23
 
-•  Visited the World Equestrian Center, a premier venue for international equine events.
-•  Ocala is known as the “Horse Capital of the World,” with rolling pastures and thoroughbred farms.
-•  Ocala: Explored the World Equestrian Center, the largest equestrian complex in the U.S., hosting elite dressage and show jumping.
+* Explored Barron River, Everglades City, and surrounding wetlands.
+* Barron River & Everglades City: A gateway to the Ten Thousand Islands, rich in mangrove ecosystems and airboat adventures.
+* Hiked through Big Cypress National Preserve: Spanning 729,000 acres, this wetland sanctuary is home to the endangered Florida panther and ghost orchids.
+  The only thing we saw were the 🌴 Indigenous Palm Trees of the Florida Everglades.
 
-🐊 Everglades Region
+---
 
-🗓️ Feb 23
+## 🗓️ March 2025 – 📍 Kelowna, British Columbia
 
-•  Explored Barron River, Everglades City, and surrounding wetlands.
-•  Barron River & Everglades City: A gateway to the Ten Thousand Islands, rich in mangrove ecosystems and airboat adventures.
-•  Big Cypress National Preserve: Spanning 729,000 acres, this wetland sanctuary is home to the endangered Florida panther and ghost orchids.
-•  This area is a gateway to Big Cypress National Preserve, home to rare orchids, panthers, and cypress domes.
+* Mar 19–23: A nice visit to Kelowna to check in with Adrienne and Darrell. Andrea had one of the best visits with Adrienne.
+* Mar 23: Adrienne fell down at the Independent store after grocery shopping in the parking lot. She was taken to Kelowna Hospital. That week she passed away peacefully with Darrell nearby.
+* Mar 28–31: Family flew and drove to Kelowna for Adrienne's wishes to have the family gather and release butterflies on Knox Mountain for her. No butterflies were available, so Andrea decided let-fly Adrienne's favorite stuffed animals instead.
+* Alex stayed with Darrell for several/many days after everyone left to help him get settled.
 
-🗓️ March 2025 – Kelowna, BC
+---
 
-•  March 19–30: A return to Kelowna for Adrienne Sherrin’s memorial. Locations span Glenmore and Lower Mission, with visits to Knox Mountain and Parkinson Recreation Park.
-•  March 30: Multiple timestamps suggest a full day of family gathering, likely including meals at The Keg and walks through Munson Pond Park.
+## 🗓️ May 22–26, 2025 – 📍 Tucson, Arizona
 
-🗓️ May 2025 – Pacific Northwest to Arizona
+* Explored downtown Tucson, Catalina Foothills, and Coronado National Forest.
+* Stayed downtown at the [The Leo Kent Hotel](https://www.theleokenthotel.com/), a historic landmark with vibrant nightlife.
+* Dinner with Todd's family at a nearby restaurant.
+* The next day we drove to Catalina Foothills to see their house and hiked around the foothills. Luckily we did not get bit by any rattlesnakes!
+* Played pickleball at new indoor courts downtown called [The Pad](https://www.thepadtucson.com/) as well as outdoor parks on the east side of town: Udall Park. Great play there with all the snowbird players still there.
+* Drove to the top of Mount Lemmon in the Coronado National Forest for panoramic views and cooler air. 103°F at the base, 65°F at the summit! Plenty of 🌵 Saguaro Cactus 🌵 along the way.
 
-•  May 2 – Kelowna: A brief return, possibly for spring cleanup or family check-ins.
-•  May 11 – Redmond, WA: Visit to Union Hill-Novelty Hill area. Redmond is known for Marymoor Park, tech roots, and cycling trails.
-•  May 22–25 – Tucson, AZ: Explored downtown Tucson, Catalina Foothills, and Coronado National Forest. Highlights include:
-  ⁠◦  Arizona-Sonora Desert Museum: A fusion of zoo, botanical garden, and natural history.
-  ⁠◦  Sabino Canyon: Desert hiking with tram access and wildlife sightings.
+---
 
-🗓️ June 2025 – Cascades & Whistler
+## 📅 June 2025 – 📍 Issaquah Cascades, Kelowna & Whistler
 
-•  June 15 – West Tiger Mountain NRCA, WA: Hiked Peak #3 in Issaquah’s 3,880-acre conservation area.
-•  June 17–18 – Kelowna: Final visits before heading north.
-•  June 20–22 – Whistler, BC: A multi-day stay in Whistler’s Upper Village and Blackcomb area. Highlights include:
-  ⁠◦  PEAK 2 PEAK Gondola: Linking Whistler and Blackcomb mountains with panoramic views.
-  ⁠◦  Lost Lake Trails: Ideal for biking and forest walks.
-  ⁠◦  Audain Art Museum: Featuring Indigenous and contemporary Canadian art.
+* June 15th – Tiger Mountain - peak #2 & #3 in Issaquah’s 3,880-acre conservation area. One of my favorite local hikes through the rain forest and up to the top with the views over Bellevue and Seattle. 
+* Jun 16, 2025 - Jun 19, 2025 – Another trip to Kelowna to check in on Darrell. Ate and played pickleball - the usual.
+* Jun 19, 2025 - Jun 23, 2025 – Whistler, BC: A multi-day stay in Whistler’s Upper Village and Blackcomb area. Highlights include:
+  * Pickelball tournament at the Whistler Tennis & Pickleball Club. First place in the 3.5 division! 🏆
+  * Gravel bike rides on the Lost Lake trail: Nice new trail around Green Lake on the apline side of the mountain returning back into town along the bike paths. Encounter a leasurely wondering bear eatting berries at the side of the bike path while we passed with caution. Met up with Annie for lunch and visited her campsite too.
+* June 28th - Pickleball tournament with Arthur Bryant - Mens 4.0 in Lacey. Ended up with second place 🥈 out of 10 teams.
 
-🗓️ July 2025 – Mountains and Kelowna Revisit
+---
 
-•  July 5 – Snoqualmie Region, WA: Hiked near Mount Catherine and Silver Peak, part of the Alpine Lakes Wilderness. Known for wildflowers and panoramic views.
-•  July 17–19 – Kelowna & Lake Country, BC: Returned to the Okanagan for summer visits. Explored vineyards and lakeside parks near Oyama and Wood Lake.
+## 📅 July 2025 – Local Mountains and 📍 Kelowna Revisit
 
-🗓️ August 2025 – Cascades to Kootenay Rockies
+* July 5 – Snoqualmie Pass Cycling on the SVT with Andrea.
+* July 17–19 – Kelowna & Lake Country cycling: Returned to the Okanagan for another summer visit. Did a pickleball tournament with another Tim as a partner in Mens 4.5 - ended up with third 🥉.
+* Andrea and I did the mix doubles 3.5 the next day - third 🥉 as well. After that was all done, still found time to ride the KVT to Veron and back: 100K total. Starting to really ramp up for TRGR Race in August.
 
-•  Aug 9 – Tenino, WA: Passed through the South Puget Sound region, known for its historic sandstone quarry and forest trails.
-•  Aug 16 – Kirkland, WA: Revisited Cotton Hill Park and waterfront areas. Kirkland blends tech and nature with views of Lake Washington.
-•  Aug 22–25 – Fernie to Kootenay National Park, BC:
-  ⁠◦  Fernie: A mountain town with biking trails and alpine charm.
-  ⁠◦  Radium Hot Springs & Kootenay National Park: Drove Hwy 93 through dramatic canyons, mineral pools, and wildlife corridors.
-  ⁠◦  Paint Pots Trail & Marble Canyon: Explored colorful iron-rich pools and limestone formations.
+---
 
-🗓️ September 2025 – Cascades to Oregon Coast
+## 📅 August 2025 – More cycling 🚴 to get ready for TransRocky Gravel Royal race
 
-•  Sept 5–13 – Tiger Mountain & Snoqualmie Pass, WA: Hiked West Tiger #2 and #3, then explored Twin Falls and Rattlesnake Ledge.
-•  Sept 18–21 – Oregon Road Trip:
+* Miles and miles around Redmond, Kirkland, Bellevue, and Issaquah. Training rides on gravel and pavement to prep for the TransRocky Gravel Royal race!
+* Aug 21–25 – Off to Radium Hot Springs & Kootenay National Park, BC:
+  * Drove there and back along Hwy 93 through dramatic canyons, mineral pools, and wildlife corridors. Maybe the most picturesque road I’ve been on in a long long time.
+  * Three days of racing: 100K with 3K elevation gain per day. Great weather & super people running the event. Did my best, but was plagued by mechanical problems. Apparently my freehub was blown with no outer bearings—still pedaled and finished each day!
+  * Best part - returning home in the best shape I been in years!
 
-  🌊 Oregon Coast Road Trip
+---
 
-  •  Eugene: Explored Spencer Butte and the Cascades Raptor Center, blending nature with university-town energy.
-  •  Jacksonville: A preserved Gold Rush town with 19th-century architecture and boutique charm.
-  •  Medford: Basecamp for Rogue Valley adventures—wineries, hikes, and whitewater rafting.
-  •  Florence: Visited the Siuslaw River Bridge Interpretive Center, Sea Lion Caves, and Heceta Head Lighthouse.
-  •  Newport: Toured the Oregon Coast Aquarium and historic bayfront, ending the coastal loop with fresh seafood and ocean views.
+## 📅 September 2025 – 📍 Local mountains and trails
 
-🗓️ October–November 2025 – Kelowna & Redmond Return
+* Hiked Tiger Mountain peaks #2 and #3 through the rainforest, climbing to the top to find open panoramic views—Bellevue and Seattle on one side, Mt. Si on the other, with kite flyers down below in the Issaquah Valley. It’s one of those places where peace of mind just settles in.
+* Cycled up to Rattlesnake Ledge and Hyak Tunnel through Snoqualmie Pass. Always fun and a challenging. On another day, rode up to Snoqualmie Pass to have lunch at Dru Brew there and returned back through Franklin Falls. Always a great day!
 
-•  Oct 31 – Lake Country & Kelowna, BC: Autumn colors and vineyard visits. Likely included stops at PÜR & SIMPLE and The Keg, Darrell’s favorites.
-•  Nov 2 – Munson Pond Park & Knox Mountain: Peaceful walks and birdwatching.
-•  Nov 7 – Kirkland, WA: Final trace near Redmond, possibly marking your return to Union Hill-Novelty Hill.
+---
 
-💼 Career Transition
+## 📅 Sept 18–21 – 📍 Oregon Road Trip:
 
-•  On October 14th, SAP’s strategic pivot toward AI led to the elimination of 632 North American and Canadian roles. This forced an
-   immediate retirement! All positive as it is an inflection point—freeing up time to focus fully on personal projects, family, and travel.
+🏖 Oregon Coast Road Trips
 
-🎄 Looking Ahead
+* First night stop in Eugene and met Adrien. Explored downtown with Adrien and enjoyed the local area. Found a fun walking area with a French-themed restaurant, and we walked over to an interesting covered open space that was very charming and had ice cream.
+* Next day traveled to Klamath Falls: pickleball tournament, mixed doubles 3.5—Andrea wasn’t feeling 100%. The town was also swarming with midges to the point of being unbearable. 🦟
+* Stayed the night at Aunt Gail's super nice new home in Phoenix, near Medford. We were able to get everyone together for a super fun dinner—Adrien, Aunt Gail, and Meranda with family—at El Molcajete Mexican Grill!
+* Visited Jacksonville on our way to the coast. This is a preserved Gold Rush town with 19th-century architecture and boutique charm. Had a great breakfast with Adrien at GoodBean Coffee.
+* Florence: Entered the town over the famous Siuslaw River Bridge. Fun town and boardwalk area to explore. Had coffee under the bridge, and further up the coast found a classic Oregon picturesque beach to walk around and explore! Andrea tried to save a few jellyfish!
+* Newport: Nice town, albeit run-down in the dock area due to lack of commercial fishing operations. Many of the docks were abandoned or in poor condition.We did find an excellent seafood place for dinner: ClearWater
+* After Newport, we headed back towards Portland enjoying the fading sun on the surrounding coastline and stay the night. Next day we returned back to Redmond.
 
-•  The holidays are approaching 🎁, and a few more trips are already in the works ✈️.
-•  With the year winding down, there's space for reflection, reconnection, and maybe one last adventure before 2026 begins 🌟.
+---
+
+## 💼 Career Transition
+
+* On October 14th, SAP’s strategic pivot toward AI led to the elimination of 632 North American and Canadian roles. This forced an immediate retirement! All positive as it is an inflection point—freeing up time to focus fully on my own AI projects, family, and travel.
+
+---
+
+## 📅 Another visit to 📍 Kelowna
+
+* Oct 30, 2025 - Nov 02, 2025 - quick trip to Kelowna to check in with Darrell
+* Took the bikes for a very chilly gravel ride through Lake Country to Vernon again. Whole ride was between 38°F and 41°F. Autumn colors were amazing!
+* As usual, we ate and ate thanks to Darrell's verasious appitite at PÜR & SIMPLE and The Keg and again and again at PÜR & SIMPLE.
+
+---
+
+## 🎄 Looking Ahead
+
+* The holidays are approaching 🎁, and a few more trips are already in the works 🛫.
+* With the year winding down, there's space for reflection, reconnection, and maybe one last adventure before 2026 begins 🌟.
+* Heading back to Kelowna for one last visit before the new year! Dec 25th-28th. 🎉 - Anyone else going to join us?
