--- a/src/content/blog/notes/project-guide.mdx
+++ b/src/content/blog/notes/project-guide.mdx
@@ -147,7 +147,7 @@ The project supports multiple environments with specific configurations:
 ```typescript
 // astro.config.dev.mjs - Development environment
 export default defineConfig({
-  site: "https://dev.skicyclerun.com",
+  site: "https://skicyclerun.com",
   output: "static",
   server: {
     port: 4321,
