--- a/src/content/blog/notes/2025-12-31-YearInReview.mdx
+++ b/src/content/blog/notes/2025-12-31-YearInReview.mdx
@@ -18,16 +18,13 @@ description: "Year 2025 highlights - plenty of family visits, pickleball, and cy
 album: "2025-YearInReview"
 auth_required: false
 ---
-
----
-
 ## 📍 Kelowna Trips: 9 visits totalling 5600 miles & 120 hours drive time...
 1. Nov 26–28, 2024 – Adrienne Sherrin’s 90th birthday
 2. Dec 26–30, 2024 – Boxing Day visit with Darrell and Adrienne
 3. Mar 19–23, 2025 – Final visit with Adrienne before her passing
-4. Mar 28–31, 2025 – Memorial gathering and butterfly tribute 🦋
-5. May 2, 2025 – Brief check-in on Darrell
-6. June 17–18, 2025 – Quick visit before Whistler
+4. Mar 28–31, 2025 – Memorial gathering and butterfly tribute 🦋 for Adrienne
+5. Apr 30-May 03, 2025 – Brief check-in on Darrell and Andrea's birthday celebration
+6. June 16–19, 2025 – Quick visit with Darrell before Whistler
 7. July 17–19, 2025 – Summer visit and Lake Country rides
 8. Oct 30–Nov 2, 2025 – Autumn gravel ride and meals with Darrell
 9. Dec 25–28, 2025 – Final holiday visit of the year 🎄
@@ -100,6 +97,11 @@ auth_required: false
 * Alex stayed with Darrell for several/many days after everyone left to help him get settled.
 
 ---
+## 🗓️ April 2025 – 📍 Kelowna, British Columbia
+
+* Apr 30–May 03: A short and almost forgotten visit to Kelowna to check in on Darrell. Celebrated Andrea's birthday with Darrell at The Keg!
+
+---
 
 ## 🗓️ May 22–26, 2025 – 📍 Tucson, Arizona
 
@@ -137,14 +139,14 @@ auth_required: false
 * Aug 21–25 – Off to Radium Hot Springs & Kootenay National Park, BC:
   * Drove there and back along Hwy 93 through dramatic canyons, mineral pools, and wildlife corridors. Maybe the most picturesque road I’ve been on in a long long time.
   * Three days of racing: 100K with 3K elevation gain per day. Great weather & super people running the event. Did my best, but was plagued by mechanical problems. Apparently my freehub was blown with no outer bearings—still pedaled and finished each day!
-  * Best part - returning home in the best shape I been in years!
+  * Best part - returning home in the best shape I've been in years!
 
 ---
 
 ## 📅 September 2025 – 📍 Local mountains and trails
 
 * Hiked Tiger Mountain peaks #2 and #3 through the rainforest, climbing to the top to find open panoramic views—Bellevue and Seattle on one side, Mt. Si on the other, with kite flyers down below in the Issaquah Valley. It’s one of those places where peace of mind just settles in.
-* Cycled up to Rattlesnake Ledge and Hyak Tunnel through Snoqualmie Pass. Always fun and a challenging. On another day, rode up to Snoqualmie Pass to have lunch at Dru Brew there and returned back through Franklin Falls. Always a great day!
+* Cycled up to Rattlesnake Ledge and Hyak Tunnel through Snoqualmie Pass. Always fun and a challenging. On another day, rode up to Snoqualmie Pass to have lunch at Dru Brew there and returned back through Franklin Falls. Both 90+ mile days in the saddle - great days in the PNW!
 
 ---
 
@@ -164,7 +166,7 @@ auth_required: false
 
 ## 💼 Career Transition
 
-* On October 14th, SAP’s strategic pivot toward AI led to the elimination of 632 North American and Canadian roles. This forced an immediate retirement! All positive as it is an inflection point—freeing up time to focus fully on my own AI projects, family, and travel.
+* On October 14th, SAP’s strategic pivot toward AI led to the elimination of 632 North American and Canadian roles. This forced my immediate retirement! All positive as it is an inflection point—freeing up time to focus fully on my own AI projects, family, and travel.
 
 ---
 
@@ -173,7 +175,6 @@ auth_required: false
 * Oct 30, 2025 - Nov 02, 2025 - quick trip to Kelowna to check in with Darrell
 * Took the bikes for a very chilly gravel ride through Lake Country to Vernon again. Whole ride was between 38°F and 41°F. Autumn colors were amazing!
 * As usual, we ate and ate thanks to Darrell's verasious appitite at PÜR & SIMPLE and The Keg and again and again at PÜR & SIMPLE.
-
 ---
 
 ## 🎄 Looking Ahead
