--- a/src/content/blog/notes/project-guide.mdx
+++ b/src/content/blog/notes/project-guide.mdx
@@ -318,7 +318,7 @@ COGNITO_LOGOUT_REDIRECT_URI=https://localhost:4321/
 COGNITO_SCOPES=openid email phone profile
 
 # API Configuration
-PUBLIC_API_BASE_URL=api.skicyclerun.com/dev
+PUBLIC_API_BASE_URL=api.skicyclerun.com/v2
 ```
 
 ## Performance Optimization
