--- a/src/content/blog/notes/project-guide.mdx
+++ b/src/content/blog/notes/project-guide.mdx
@@ -21,13 +21,13 @@ cover: "ProjectGuide.png"
 auth_required: false
 ---
 
-This comprehensive guide documents the SkiCycleRun.dev project architecture, AWS cloud services, authentication system, and development workflow. The site is built as a modern static site with serverless backend services for enhanced functionality and security.
+This guide offers a comprehensive look at the SkiCycleRun project architecture, including its use of AWS cloud services, authentication mechanisms, and development workflow. The site is designed as a modern static frontend powered by serverless backend services, delivering robust functionality and enhanced security.
 
 ## Table of contents
 
 ## Architecture Overview
 
-SkiCycleRun.dev is a hybrid static site built with Astro.js that leverages AWS cloud services for authentication, protected content, and data storage. The architecture follows modern JAMstack principles with serverless backend integration.
+SkiCycleRun is a hybrid static site built with Astro.js that leverages AWS cloud services for authentication, protected content, and data storage. The architecture follows modern JAMstack principles with serverless backend integration.
 
 ### Core Technology Stack
 
