--- a/src/content/blog/notes/project-guide.mdx
+++ b/src/content/blog/notes/project-guide.mdx
@@ -409,7 +409,7 @@ Multi-layer caching for optimal performance:
 
 ### GitHub Repositories
 
-- [Main Site Repository](https://github.com/timothyhalley/skicyclerun.dev)
+- [Main Site Repository](https://github.com/timothyhalley/skicyclerun.com)
 - [AWS SAM Backend](https://github.com/timothyhalley/skicyclerun.sam)
 
 ### External Tools
@@ -419,4 +419,4 @@ Multi-layer caching for optimal performance:
 - [SVG Repo](https://www.svgrepo.com/) - SVG icon resources
 - [Tabler Icons](https://tabler.io/icons) - Icon library
 
-This guide provides a comprehensive overview of the SkiCycleRun.dev architecture and development workflow. For specific implementation details, refer to the source code and AWS documentation.
+This guide provides a comprehensive overview of the SkiCycleRun.com architecture and development workflow. For specific implementation details, refer to the source code and AWS documentation.
