--- a/src/content/blog/travel/2022-06-11-Barcelona.mdx
+++ b/src/content/blog/travel/2022-06-11-Barcelona.mdx
@@ -13,7 +13,7 @@ tags:
   - "cycle"
 class: "2022 > Travel > Europe > Spain > Barcellona"
 description: "An exciting city with endless enclaves that teems with unique character wherever you go"
-album: "barcelona"
+album: "2022-06-Barcelona"
 cover: "Travel_Barcelona_Ink.png"
 auth_required: false
 lat: 41.3888
