--- a/src/content/blog/notes/project-guide.mdx
+++ b/src/content/blog/notes/project-guide.mdx
@@ -232,7 +232,7 @@ Components are built with responsive-first design:
         {description}
       </p>
     </div>
-    <div class="flex-shrink-0">
+    <div class="shrink-0">
       <Datetime pubDatetime={pubDatetime} className="text-xs opacity-60" />
     </div>
   </div>
