--- a/src/content/blog/travel/2017-01-15-NewYork.mdx
+++ b/src/content/blog/travel/2017-01-15-NewYork.mdx
@@ -2,9 +2,9 @@
 layout: "@layouts/PhotoLayout.astro"
 author: "Brizzy Daemon"
 pubDatetime: 2025-11-17T12:48:00-08:00
-title: "2017-NewYorkCity"
+title: "NewYorkCity"
 type: "BLOG"
-slug: "2017-NewYorkNYC"
+slug: "NewYork-NYC"
 featured: true
 tags:
   - "reflections"
