--- a/src/content/blog/vlog/2024-07-31-Montreal.mdx
+++ b/src/content/blog/vlog/2024-07-31-Montreal.mdx
@@ -2,7 +2,7 @@
 layout: "@layouts/MDXVideo.astro"
 author: "Ranger LeBlanc"
 pubDatetime: 2024-07-31T16:00:00+00:00
-title: "Montreal Architecture"
+title: "Montreal"
 type: "VLOG"
 slug: "montreal-architecture"
 featured: false
