--- a/src/content/blog/travel/2022-12-12-Jamacia.mdx
+++ b/src/content/blog/travel/2022-12-12-Jamacia.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Jamaica Vacation"
+title: "Jamaica"
 layout: "@layouts/PhotoLayout.astro"
 author: "Orbit Strider"
 pubDatetime: 2022-12-12T14:14:14-05:00
