--- a/src/content/blog/travel/2017-01-15-NewYork.mdx
+++ b/src/content/blog/travel/2017-01-15-NewYork.mdx
@@ -17,6 +17,8 @@ description: "Visit New York City in January 2017 for sightseeing, pizza, and ar
 album: "2017-01-NewYork"
 cover: "FlatIronBuilding_NYC.png"
 auth_required: true
+auth_groups:
+  - "GeneralUsers"
 lat: 40.7297
 lon: -73.9969
 ---
