--- a/src/content/blog/tech/2025-08-04-GroundZero.mdx
+++ b/src/content/blog/tech/2025-08-04-GroundZero.mdx
@@ -17,7 +17,7 @@ album: "local"
 cover: "Tech_GenAITech.png"
 auth_required: true
 auth_groups:
-  - "PowerUsers"
+  - "SuperUsers"
 ---
 🌌 GenAI Today: A Living Canvas of Code and Creativity
 
