--- a/src/content/blog/tech/2025-09-14-AGI Paper.mdx
+++ b/src/content/blog/tech/2025-09-14-AGI Paper.mdx
@@ -17,7 +17,7 @@ album: "local"
 cover: "Tech_GenAITech.png"
 auth_required: true
 auth_groups:
-  - "GeneralUsers"
+  - "SuperUsers"
 ---
 🧠 Conceptual & Technical Distinctions
 
