--- a/src/content/blog/travel/2023-01-15-Tokyo.mdx
+++ b/src/content/blog/travel/2023-01-15-Tokyo.mdx
@@ -13,7 +13,7 @@ tags:
   - "city"
 class: "2023 > Travel > Tokyo"
 description: "Tokyo — a vibrant fusion of energy, culture, and endless visual sites to behold."
-album: "tokyo"
+album: "2023-01-Tokyo"
 cover: "Chiyoda_Sotokanda-60.png"
 auth_required: false
 lat: 35.6895
